# pathway-subtyping-framework

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
configs/: example_autism.yaml  example_epilepsy.yaml  example_expression.yaml  example_intellectual_disability.yaml  example_schizophrenia.yaml  test_synthetic.yaml
data/benchmarks/: README.md
data/pathways/: README.md  autism_pathways.gmt  bipolar_pathways.gmt  epilepsy_pathways.gmt  intellectual_disability_pathways.gmt  parkinsons_pathways.gmt  schizophrenia_pathways.gmt
data/sample/: synthetic_cohort.vcf  synthetic_phenotypes.csv
data/validation_cache/: .gitignore
docs/: METHODS.md  data_formats.md  framework_overview.md  limitations.md  one-pager-template.md  one-pager.md  outputs_dictionary.md  project-roadmap.md  quickstart.md  reproducibility.md  terminology.md  troubleshooting.md  zenodo_setup.md
docs/api/: cli.md  config.md  cross_cohort.md  index.md  pipeline.md  threshold_calibration.md  validation.md  variant_qc.md
docs/collaboration/: email-template.md  target-labs.md
docs/contributor-kit/: 01-getting-started.md  02-data-access-guide.md  04-research-compliance.md  05-project-proposal-template.md  06-technical-setup.md  07-analysis-workflow.md  08-publishing-guidelines.md  09-faq.md  README.md
docs/contributor-kit/03-data-sources/: clinvar-usage-guide.md  dbgap-application-template.md  gnomad-usage-guide.md  sfari-application-template.md  ukbiobank-application-template.md
docs/guides/: adapting-for-your-disease.md  contributing-pathways.md  cross-cohort-validation.md  pathway-curation-guide.md  performance-and-hardware.md  validation-gates.md
examples/notebooks/: 00_quick_demo.ipynb  01_getting_started.ipynb
examples/workflows/nextflow/: main.nf  nextflow.config
examples/workflows/snakemake/: Snakefile  environment.yaml
examples/workflows/snakemake/scripts/: characterize.py
scripts/: annotate_vcf.py  benchmark_performance.py  cross_cohort_example.py  demo.sh  generate_calibration_table.py  validate_with_public_data.py
src/pathway_subtyping/: __init__.py  __main__.py  ancestry.py  batch_correction.py  benchmark.py  characterization.py  cli.py  clustering.py  config.py  cross_cohort.py  data_quality.py  expression.py  pipeline.py  sensitivity.py  simulation.py  statistical_rigor.py  threshold_calibration.py  validation.py  validation_datasets.py  variant_qc.py
src/pathway_subtyping/utils/: __init__.py  performance.py  seed.py
tests/: conftest.py  test_ancestry.py  test_batch_correction.py  test_benchmark.py  test_characterization.py  test_cli.py  test_clustering.py  test_config.py  test_cross_cohort.py  test_data_quality.py  test_expression.py  test_integration.py  test_performance.py  test_performance_opts.py  test_pipeline.py  test_sensitivity.py  test_simulation.py  test_statistical_rigor.py  test_threshold_calibration.py  test_validation.py  test_validation_datasets.py  test_variant_qc.py
